# pcsv-nw

./: .gitignore  Cargo.toml
src/: main.rs
tests/data/: optimization_lbfgsb_1.csv  optimization_lbfgsb_7164.csv
tests/data/fit_02/: optimization_lbfgsb_7055.csv
tests/data/fit_03/: optimization_lbfgsb_5.csv
tests/data/r1/: optimization_lbfgsb_0.csv
tests/example/: fit_0_output_example.csv
tests/jld/fits_01/: optimization_lbfgsb_0.jld2
tests/jld/fits_02/: optimization_lbfgsb_1.jld2
